--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,11 +22,16 @@ body {
     --textDim: hsl(68, 61%, 45%);
     --accentHi: hsla(155, 100%, 100%, 25%);
     --col-dark: #181818;
+    --col-darker: #0A0A0A;
     --col-golden: #9d9d39;
     --col-special: #A7E600;
     --col-dark-golden: #e3ec58;
   }
 
+}
+
+.bg-darker {
+  background-color: var(--col-darker);
 }
 
 .text-golden {
@@ -43,10 +48,16 @@ body {
   color: var(--col-dark);
 }
 
-.border-golden {
+.border-dark-golden {
   border-color: var(--col-dark-golden);
+  border-width: 2px  
+}
+
+.border-golden {
+  border-color: var(--col-golden);
   border-width: 1px  
 }
+
 /* Navigation hover effects */
 .hover-nav:hover {
   background-color: var(--col-dark-golden);
