--- a/FE/src/app/globals.css
+++ b/FE/src/app/globals.css
@@ -24,8 +24,23 @@ body {
     --col-golden: #9d9d39;
     --col-special: #A7E600;
     --col-dark-golden: #e3ec58;
+    --col-yt: #FF0000;
+    --col-rd: #FF4500;
+    --col-tw: #1DA1F2;
   }
 
+}
+
+.bg-yt {
+  background-color: var(--col-yt);
+}
+
+.bg-rd {
+  background-color: var(--col-rd);
+}
+
+.bg-tw {
+  background-color: var(--col-tw);
 }
 
 .bg-darker {
@@ -95,7 +110,7 @@ body {
 }
 
 .span-prop {
-  @apply px-2 bg-opacity-45 bg-black rounded-xl border border-white
+  @apply px-2 bg-opacity-45 bg-black border border-white
 }
 /* Background color classes */
 .bg-dark {
@@ -125,5 +140,5 @@ body {
 }
 
 .button-hover:hover {
-  @apply bg-dark text-dark-golden border-golden
+  @apply text-dark-golden
 }
